--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
     <div class="navbar navbar-fixed-bottom">
         <div class="row">
             <div class="col-md-6 text-center col-md-offset-3">
-                <button class="btn btn-primary" id="turn_on">Turn On Lights</button>
+                <button class="btn btn-primary" id="turn_on">LETS START</button>
                 <button class="btn btn-primary" id="play">Play Music</button>
                 <button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-                <button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-                <button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
+                <button class="btn btn-primary" id="balloons_flying">Anythings else</button>
+                <button class="btn btn-primary" id="cake_fadein">Birthday Cake</button>
                 <button class="btn btn-primary" id="light_candle"> Light Candle</button>
                 <button class="btn btn-primary" id="wish_message">Happy Birthday</button>
                 <button class="btn btn-primary" id="story">A mesage for you</button>
