--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                 <button class="btn btn-primary" id="light_candle"> Light Candle</button>
                 <button class="btn btn-primary" id="wish_message">Happy Birthday</button>
                 <button class="btn btn-primary" id="story">A mesage for you</button>
-                <!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
+                <button class="btn btn-primary" id="cake_cut">Let's Cut the Cake</button> 
+             </div>   
+ <img src="assets/Balloon-Border.png" width="100%">
             </div>
         </div>
     </div>
